<resources>
	<string name="app_name">Focuse Start (test task)</string>
	<string name="error_message">Такого в апишке нет(</string>
	<string name="tittle_1">Scheme/Network</string>
	<string name="tittle_2">Brand</string>
	<string name="tittle_4">Type</string>
	<string name="type_value">Debit</string>
	<string name="tittle_3">Card number</string>
	<string name="length_tittle">Length</string>
	<string name="luhn_tittle">luhn</string>
	<string name="luhn_value">Yes</string>
	<string name="tittle_5">prepaid</string>
	<string name="tittle_6">country</string>
	<string name="tittle_7">bank</string>
	<string name="show_coordinates_text">Посмотреть\n на карте</string>
	<string name="SHARED_PREFS_REQUESTS">SHARED_PREFS_REQUESTS</string>
	<string name="REQUESTS_SET_NAME">REQUESTS_SET</string>
	<string name="show_history_button_text">История запросов</string>
	<string name="no_requests_text">Запросов, пока нет...</string>
</resources>